# gelato

./: .gitignore  ONTOLOGY.md  README.md  pyproject.toml
.github/workflows/: publish.yml
data/: type_map.json
data/annotation/: a1.conll  a1_12.conll  a1_13.conll  a1_house.conll  a1_senate.conll  a2.conll  a2_12.conll  a2_23.conll  a2_house.conll  a2_senate.conll  a3.conll  a3_13.conll  a3_23.conll  a3_house.conll  a3_senate.conll
data/splits/: dev1.conll  dev2.conll  test1.conll  test2.conll  train1.conll  train2.conll
data/utils/: iaa.py  utils.py
optimizers/optimized_Abstraction_ChainOfThought_MIPROv2_50_c749773d-e240-42cc-950b-e882b0730d58/: program.pkl
optimizers/optimized_Act_ChainOfThought_MIPROv2_50_d120ddd0-5635-43f9-a36f-32fac27e1c22/: program.pkl
optimizers/optimized_Class_ChainOfThought_MIPROv2_50_5862269b-e3e6-422e-a989-fc78247846a5/: metadata.json  program.pkl
optimizers/optimized_Document_ChainOfThought_MIPROv2_50_a26ae906-b80d-45b6-b94d-517d5b4f65ce/: program.pkl
optimizers/optimized_Organization_ChainOfThought_MIPROv2_50_e63ec613-4219-435d-afe2-58a147ce5c43/: program.pkl
optimizers/optimized_Person_ChainOfThought_MIPROv2_50_990335c6-56be-42ec-b2fa-aa00ef879736/: program.pkl
scores/: bert-base-cased-stage2.conll  bert-large-cased-stage2.conll  gold-stage2.conll  roberta-base-stage2.conll  roberta-large-stage2.conll  test_eval_Wollaston_gelato-bert-base-cased.conll  test_eval_Wollaston_gelato-bert-large-cased.conll  test_eval_Wollaston_gelato-roberta-base-aligned.conll  test_eval_Wollaston_gelato-roberta-base-unaligned.conll  test_eval_Wollaston_gelato-roberta-large-aligned.conll  test_eval_Wollaston_gelato-roberta-large-unaligned.conll  test_eval_Wollaston_gelato-xlm-roberta-base-unaligned.conll  test_eval_Wollaston_gelato-xlm-roberta-large-unaligned.conll
scripts/: hf_upload.py
src/gelato/: cli.py
src/gelato_ner/: cli.py
src/gelato_ner/clients/: __init__.py  embed.py
src/gelato_ner/data/: __init__.py
src/gelato_ner/fine_tuning/: confusion.py  run.py
(+2 files in other folders)
