[project]
name = "gelato-ner"
version = "1.0.0"
description = "CLI for the GELATO Dataset for Legislative NER"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Matthew Flynn", email = "matt@wollaston.dev"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
  "datasets>=4.0.0",
  "dspy>=3.0.3",
  "evaluate>=0.4.6",
  "numpy>=2.2.6",
  "pip>=25.2",
  "pyarrow>=14.0.0",
  "seqeval>=1.2.2",
  "seqscore>=0.6.0",
  "torch>=2.7.1",
  "transformers>4.57.0",
  "wandb>=0.22.2",
  "loguru>=0.7.3",
  "typer>=0.19.2",
  "accelerate>=1.10.1",
  "seaborn>=0.13.2",
]

[dependency-groups]
dev = ["pytest>=8.4.2"]

[project.scripts]
gelato = "gelato_ner:cli"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
